WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20999
Inspector hover to select does not work properly on Windows
https://bugs.webkit.org/show_bug.cgi?id=20999
Summary
Inspector hover to select does not work properly on Windows
Matt Lilek
Reported
2008-09-22 10:41:44 PDT
The hover to select functionality does not work properly on Windows - the first node is initially highlighted properly, but then goes all the way out to what appears to be the body element. It is also impossible to actually select the node as clicking does nothing. The highlight window is probably messing with our mouse events.
Attachments
Patch
(3.97 KB, patch)
2008-09-22 17:37 PDT
,
Matt Lilek
no flags
Details
Formatted Diff
Diff
one liner
(1.22 KB, patch)
2008-09-24 18:01 PDT
,
Matt Lilek
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2008-09-22 10:45:14 PDT
<
rdar://problem/6236524
>
Matt Lilek
Comment 2
2008-09-22 17:37:49 PDT
Created
attachment 23685
[details]
Patch I'm hoping I missed an easier way of doing this... There is still a tendency for the highlight to get "stuck" at a larger, outer element, but it doesn't seem as bad as is in the tree current (but that could just be me). It's definitely something to fix in the future, but this at least gets it working on Windows.
Matt Lilek
Comment 3
2008-09-23 05:53:02 PDT
Comment on
attachment 23685
[details]
Patch Clearing the review flag, I think the hover forwarding stuff is wrong, I'd like to into it some more.
Adam Roben (:aroben)
Comment 4
2008-09-23 06:40:45 PDT
If you just want all mouse events to pass through the overlay window as if it weren't there, try passing WS_EX_TRANSPARENT to CreateWindowEx.
Matt Lilek
Comment 5
2008-09-24 18:01:40 PDT
Created
attachment 23777
[details]
one liner One line patch - I'm an idiot.
Darin Adler
Comment 6
2008-09-24 18:03:55 PDT
Comment on
attachment 23777
[details]
one liner r=me
Matt Lilek
Comment 7
2008-09-24 18:10:50 PDT
Committed revision 36881.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug