2008-09-24  Matt Lilek  <webkit@mattlilek.com>

Reviewed by Darin Adler.

        Bug 20999: Inspector hover to select does not work properly on Windows
        https://bugs.webkit.org/show_bug.cgi?id=20999
        <rdar://problem/6236524>

        * WebNodeHighlight.cpp:
        (WebNodeHighlight::show):



Canonical link: https://commits.webkit.org/29155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36881 268f45cc-cd09-0410-ab3c-d52691b4dbfc